# InstaFix

./: .gitignore  Dockerfile  LICENSE  README.md  config.toml.example  grid.py  pyproject.toml
src/: cache.py  config.py  main.py
src/internal/: grid_layout.py  jslex.py  singleflight.py
src/internal/jslex/: js_string.pyx  setup.py
src/scrapers/: __init__.py  api.py  data.py  embed.py  share.py
src/templates/: __init__.py  embed.py  error.py
templates/: embed.html
