[project]
name = "instafix-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp[speedups]>=3.11.14",
    "loguru>=0.7.3",
    "networkx>=3.4.2",
    "pyvips>=2.2.3",
    "pyvips-binary>=8.16.1",
    "selectolax[cython]>=0.3.28",
    "tomli>=2.2.1",
    "uvloop>=0.21.0",
]
